--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     padding: 0;
     
 }
+body{
+    display: flex;
+    background-color: #2a67c9;
+    flex-direction: column;
+}
 .gridDivVert {
     display: flex;
 }
@@ -11,14 +16,20 @@
     display: flex;
     flex-wrap: wrap;
     width: 1280px;
-    height: 600px;
+    height: 652px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     border: 3px solid black;
+    background-color: white;
 }
 button {
     width: 200px;
     height: 35px;
-    margin-bottom: 5px;
+    border-radius: 4px;
 }
+header {
+    display: flex;
+    letter-spacing: 3px;
+}
+
